Project

General

Profile

Actions

Bug #22631

closed

mds: crashes because of old pool id in journal header

Added by dongdong tao over 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous,jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS, tools
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

we have use rados cppool command to copy the cephfs metadata pool
but,after copy done, mds would keep crashing when we restart it

home/jenkins-build/build/workspace/ceph-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos7/DIST/centos7/MACHINE_SIZE/huge/release/12.2.2/rpm/el7/BUILD/ceph-12.2.2/src/osdc/Journaler.cc: 87: FAILED assert(layout.pool_id pg_pool)
/home/jenkins-build/build/workspace/ceph-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos7/DIST/centos7/MACHINE_SIZE/huge/release/12.2.2/rpm/el7/BUILD/ceph-12.2.2/src/osdc/Journaler.cc: In function 'void Journaler::_set_layout(const file_layout_t*)' thread 7ff0a0595700 time 2018-01-09 02:26:47.129658
/home/jenkins-build/build/workspace/ceph-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos7/DIST/centos7/MACHINE_SIZE/huge/release/12.2.2/rpm/el7/BUILD/ceph-12.2.2/src/osdc/Journaler.cc: 87: FAILED assert(layout.pool_id pg_pool)
ceph version 12.2.2 (cf0baeeeeba3b47f9427c6c97e2144b094b7e5ba) luminous (stable)
1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x110) [0x5556f751f850]
2: (()+0x544abf) [0x5556f748eabf]
3: (Journaler::_finish_read_head(int, ceph::buffer::list&)+0x2b5) [0x5556f7491e35]
4: (Context::complete(int)+0x9) [0x5556f71ff069]
5: (Finisher::finisher_thread_entry()+0x198) [0x5556f751e7c8]
6: (()+0x7e25) [0x7ff0ab7f3e25]
7: (clone()+0x6d) [0x7ff0aa8d634d]


Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #22763: luminous: mds: crashes because of old pool id in journal headerResolvedPrashant DActions
Copied to CephFS - Backport #22764: jewel: mds: crashes because of old pool id in journal headerResolvedPrashant DActions
Actions #1

Updated by dongdong tao over 6 years ago

through the code, we found it is because of the old pool id in the journal header.
my solution is
add "set pool_id" option to cephfs-journal-tool header mode, and it worked.

Actions #3

Updated by Jos Collin over 6 years ago

  • Status changed from New to Fix Under Review
  • Assignee set to dongdong tao
Actions #4

Updated by Patrick Donnelly over 6 years ago

  • Subject changed from mds keep crashing because of old pool id in journal header to mds: crashes because of old pool id in journal header
  • Status changed from Fix Under Review to Pending Backport
  • Backport set to luminous,jewel
  • Component(FS) MDS, tools added
Actions #5

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #22763: luminous: mds: crashes because of old pool id in journal header added
Actions #6

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #22764: jewel: mds: crashes because of old pool id in journal header added
Actions #7

Updated by Nathan Cutler about 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF