cephfs-journal-tool: add "set pool_id" option

Fixes: http://tracker.ceph.com/issues/22631

Signed-off-by: dongdong tao <tdd21151186@gmail.com>